Fix for landscape orientation on iOS devices to prevent text scaling.

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ html {
     box-sizing: border-box;
     height: 100%;
     overflow-x: hidden;
+    -webkit-text-size-adjust: 100%;
 }
 body {
 	font-family: "Helvetica", "Arial", sans-serif;
